[gd_scene load_steps=21 format=3 uid="uid://bd8xlc4wnosn7"]

[ext_resource type="Script" path="res://ressources/scripts/mainmenu.gd" id="1_lwb0q"]
[ext_resource type="Texture2D" uid="uid://c76wxc05wbdju" path="res://ressources/sprites/gamesphotos.png" id="2_fqqhf"]
[ext_resource type="Texture2D" uid="uid://dlxkbd0fyafja" path="res://ressources/star.png" id="3_ciq5x"]
[ext_resource type="Texture2D" uid="uid://b8dohkei1lhqk" path="res://ressources/endings/truegenocide.png" id="4_16cdb"]
[ext_resource type="AudioStream" uid="uid://cbi0ociary8k6" path="res://ressources/sounds/bgm/Menu.mp3" id="4_h0se4"]
[ext_resource type="AudioStream" uid="uid://c1mey6o2nt0sf" path="res://ressources/sounds/button.mp3" id="4_iqq5m"]
[ext_resource type="AudioStream" uid="uid://deewen8jd5bcx" path="res://ressources/sounds/bgm/More.mp3" id="5_do8js"]
[ext_resource type="Texture2D" uid="uid://daahdux750l2c" path="res://ressources/endings/pacifice.png" id="5_oriun"]
[ext_resource type="Texture2D" uid="uid://baonipw5hyish" path="res://ressources/endings/ipad.png" id="6_gxyhf"]
[ext_resource type="AudioStream" uid="uid://bb1rn2xk4wcer" path="res://ressources/sounds/bgm/More+.mp3" id="6_yunj0"]
[ext_resource type="AudioStream" uid="uid://b6sh42jivtmdi" path="res://ressources/sounds/bgm/Menu+.mp3" id="8_ybvua"]

[sub_resource type="LabelSettings" id="LabelSettings_460u5"]
outline_color = Color(0.719506, 0.312148, 9.62615e-08, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mclv"]
atlas = ExtResource("2_fqqhf")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_khacj"]
atlas = ExtResource("2_fqqhf")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_atos1"]
atlas = ExtResource("2_fqqhf")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2016k"]
atlas = ExtResource("2_fqqhf")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_plov4"]
atlas = ExtResource("2_fqqhf")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_oqufu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mclv")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khacj")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atos1")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2016k")
}],
"loop": true,
"name": &"locked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plov4")
}],
"loop": true,
"name": &"party",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_6i3i2"]
font_color = Color(0.724643, 0.724643, 0.724643, 1)

[sub_resource type="GDScript" id="GDScript_o8vl7"]
resource_name = "unlocked"
script/source = "extends Control

func _process(delta: float) -> void:
	var save = SD.read_save()
	if save[\"ending\"][\"GENOCIDE\"] == true:
		$TextureRect.modulate = Color(1, 1, 1)
	else:
		$TextureRect.modulate = Color(0, 0, 0)
	if save[\"ending\"][\"PACIFIST\"] == true:
		$TextureRect2.modulate = Color(1, 1, 1)
	else:
		$TextureRect2.modulate = Color(0, 0, 0)
	if save[\"ending\"][\"IPAD\"] == true:
		$TextureRect3.modulate = Color(1, 1, 1)
	else:
		$TextureRect3.modulate = Color(0, 0, 0)
"

[node name="Menu" type="Node"]
script = ExtResource("1_lwb0q")

[node name="menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="menu"]
z_index = -1
layout_mode = 2
offset_left = -620.0
offset_top = -357.0
offset_right = 685.0
offset_bottom = 398.0
color = Color(0.342163, 0.173683, 1.68458e-07, 1)

[node name="ColorRect2" type="ColorRect" parent="menu"]
z_index = -1
layout_mode = 2
offset_left = -627.0
offset_top = -803.0
offset_right = 678.0
offset_bottom = -48.0
color = Color(0.617614, 0.332285, 3.85046e-07, 1)

[node name="title" type="Label" parent="menu"]
layout_mode = 2
offset_left = -531.0
offset_top = -291.0
offset_right = -332.0
offset_bottom = -248.0
scale = Vector2(5.54, 5.54)
text = "Yaxoul's
Birthday party!"
label_settings = SubResource("LabelSettings_460u5")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
layout_mode = 2
offset_left = -328.0
offset_top = -26.0
offset_right = -129.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.48914, 3.48914)

[node name="start" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
text = "Start"
flat = true

[node name="exit" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
text = "Exit"
flat = true

[node name="more" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
text = "more"
flat = true

[node name="selectgame" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="selectgame"]
z_index = -1
layout_mode = 2
offset_left = -620.0
offset_top = -357.0
offset_right = 685.0
offset_bottom = 398.0
color = Color(0, 0.494179, 0.200976, 1)

[node name="ColorRect2" type="ColorRect" parent="selectgame"]
z_index = -1
layout_mode = 2
offset_left = -625.0
offset_top = -83.0
offset_right = 680.0
offset_bottom = 672.0
color = Color(2.64719e-06, 0.673585, 0.314576, 1)

[node name="title" type="Label" parent="selectgame"]
layout_mode = 2
offset_left = -531.0
offset_top = -291.0
offset_right = -332.0
offset_bottom = -271.0
scale = Vector2(5.54, 5.54)
text = "select a game"
label_settings = SubResource("LabelSettings_460u5")
horizontal_alignment = 1

[node name="back" type="Button" parent="selectgame"]
layout_mode = 2
offset_left = -546.0
offset_top = -186.0
offset_right = -461.0
offset_bottom = -158.0
scale = Vector2(2.82477, 2.82477)
text = "back
"
flat = true

[node name="play" type="Button" parent="selectgame"]
layout_mode = 2
offset_left = -428.0
offset_top = 253.88
offset_right = -343.0
offset_bottom = 281.88
scale = Vector2(2.82477, 2.82477)
text = "play
"
flat = true

[node name="left" type="Button" parent="selectgame"]
layout_mode = 2
offset_left = -548.0
offset_top = 37.8805
offset_right = -519.0
offset_bottom = 65.8805
scale = Vector2(2.82477, 2.82477)
text = "<"
flat = true

[node name="right" type="Button" parent="selectgame"]
layout_mode = 2
offset_left = -155.0
offset_top = 37.8805
offset_right = -127.0
offset_bottom = 65.8805
scale = Vector2(2.82477, 2.82477)
text = ">"
flat = true

[node name="game" type="AnimatedSprite2D" parent="selectgame"]
position = Vector2(-311, 79.8805)
scale = Vector2(0.297761, 0.297761)
sprite_frames = SubResource("SpriteFrames_oqufu")
animation = &"party"

[node name="name" type="Label" parent="selectgame"]
layout_mode = 0
offset_left = -64.0
offset_top = -70.0
offset_right = 218.0
offset_bottom = -50.0
scale = Vector2(2.2224, 2.2224)
text = "Locked..."
autowrap_mode = 2

[node name="description" type="Label" parent="selectgame"]
layout_mode = 0
offset_left = -64.0
offset_top = -26.0
offset_right = 397.0
offset_bottom = 230.0
scale = Vector2(1.39677, 1.39677)
text = "finish the three other games before to unlock this one..."
autowrap_mode = 2

[node name="star" type="Sprite2D" parent="selectgame"]
position = Vector2(-182, -48)
scale = Vector2(0.595, 0.595)
texture = ExtResource("3_ciq5x")

[node name="more" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="more"]
z_index = -1
layout_mode = 2
offset_left = -620.0
offset_top = -357.0
offset_right = 685.0
offset_bottom = 398.0
color = Color(0.219058, 0.224637, 0.223268, 1)

[node name="ColorRect2" type="ColorRect" parent="more"]
z_index = -1
layout_mode = 2
offset_left = -625.0
offset_top = -930.0
offset_right = 680.0
offset_bottom = -175.0
color = Color(0.35338, 0.361229, 0.359302, 1)

[node name="title" type="Label" parent="more"]
layout_mode = 2
offset_left = -826.0
offset_top = -281.0
offset_right = -627.0
offset_bottom = -261.0
scale = Vector2(4.16139, 4.16139)
text = "more
"
label_settings = SubResource("LabelSettings_6i3i2")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="more"]
layout_mode = 2
offset_left = -299.0
offset_top = 28.0
offset_right = -100.0
offset_bottom = 120.0
scale = Vector2(3.31122, 3.31122)

[node name="stats" type="Button" parent="more/VBoxContainer"]
layout_mode = 2
text = "Endings"
flat = true

[node name="credits" type="Button" parent="more/VBoxContainer"]
layout_mode = 2
text = "RESET"
flat = true

[node name="back" type="Button" parent="more/VBoxContainer"]
layout_mode = 2
text = "go back"
flat = true

[node name="stats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_o8vl7")

[node name="ColorRect" type="ColorRect" parent="stats"]
z_index = -1
layout_mode = 2
offset_left = -620.0
offset_top = -357.0
offset_right = 685.0
offset_bottom = 398.0
color = Color(0.219058, 0.224637, 0.223268, 1)

[node name="ColorRect2" type="ColorRect" parent="stats"]
z_index = -1
layout_mode = 2
offset_left = -625.0
offset_top = -930.0
offset_right = 680.0
offset_bottom = -175.0
color = Color(0.35338, 0.361229, 0.359302, 1)

[node name="title" type="Label" parent="stats"]
layout_mode = 2
offset_left = -758.0
offset_top = -300.0
offset_right = -559.0
offset_bottom = -280.0
scale = Vector2(4.16139, 4.16139)
text = "Endings"
label_settings = SubResource("LabelSettings_6i3i2")
horizontal_alignment = 1

[node name="back" type="Button" parent="stats"]
layout_mode = 2
offset_left = -546.0
offset_top = 259.0
offset_right = -466.0
offset_bottom = 287.0
scale = Vector2(2.71049, 2.71049)
text = "back"
flat = true

[node name="TextureRect" type="TextureRect" parent="stats"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -485.0
offset_top = -119.0
offset_right = -389.0
offset_bottom = -23.0
scale = Vector2(2.7087, 2.7087)
texture = ExtResource("4_16cdb")

[node name="TextureRect2" type="TextureRect" parent="stats"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -113.0
offset_top = -119.0
offset_right = -17.0
offset_bottom = -23.0
scale = Vector2(2.7087, 2.7087)
texture = ExtResource("5_oriun")

[node name="TextureRect3" type="TextureRect" parent="stats"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 265.0
offset_top = -119.0
offset_right = 361.0
offset_bottom = -23.0
scale = Vector2(2.7087, 2.7087)
texture = ExtResource("6_gxyhf")

[node name="credits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="credits"]
z_index = -1
layout_mode = 2
offset_left = -614.0
offset_top = -360.0
offset_right = 691.0
offset_bottom = 395.0
color = Color(0.219058, 0.224637, 0.223268, 1)

[node name="ColorRect2" type="ColorRect" parent="credits"]
z_index = -1
layout_mode = 2
offset_left = -625.0
offset_top = -376.0
offset_right = 680.0
offset_bottom = -175.0
color = Color(0.35338, 0.361229, 0.359302, 1)

[node name="title" type="Label" parent="credits"]
layout_mode = 2
offset_left = -397.0
offset_top = -289.0
offset_right = -198.0
offset_bottom = -269.0
scale = Vector2(4.16139, 4.16139)
text = "Reset"
label_settings = SubResource("LabelSettings_6i3i2")
horizontal_alignment = 1

[node name="back" type="Button" parent="credits"]
layout_mode = 2
offset_left = -546.0
offset_top = 259.0
offset_right = -466.0
offset_bottom = 287.0
scale = Vector2(2.71049, 2.71049)
text = "back"
flat = true

[node name="RESET" type="Button" parent="credits"]
layout_mode = 2
offset_left = -82.0
offset_top = 137.0
offset_right = -2.00003
offset_bottom = 165.0
scale = Vector2(2.71049, 2.71049)
text = "RESET"
flat = true

[node name="Label" type="Label" parent="credits"]
layout_mode = 0
offset_left = -379.0
offset_top = -22.0
offset_right = 2.0
offset_bottom = 119.0
scale = Vector2(2.93779, 2.93779)
text = "Tes sur de faire sa?"

[node name="menuaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h0se4")
autoplay = true
parameters/looping = true

[node name="menu+audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ybvua")
volume_db = -80.0
autoplay = true
parameters/looping = true

[node name="moreaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_do8js")
volume_db = -80.0
autoplay = true
parameters/looping = true

[node name="more+audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yunj0")
volume_db = -80.0
autoplay = true
parameters/looping = true

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_iqq5m")
pitch_scale = 0.6
parameters/looping = false

[connection signal="pressed" from="menu/VBoxContainer/start" to="." method="_on_menu_start_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/exit" to="." method="_on_menu_exit_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/more" to="." method="_on_menu_more_pressed"]
[connection signal="pressed" from="selectgame/back" to="." method="_on_sg_back_pressed"]
[connection signal="pressed" from="selectgame/play" to="." method="_on_sg_play_pressed"]
[connection signal="pressed" from="selectgame/left" to="." method="_on_sg_left_pressed"]
[connection signal="pressed" from="selectgame/right" to="." method="_on_sg_right_pressed"]
[connection signal="pressed" from="more/VBoxContainer/stats" to="." method="_on_more_stats_pressed"]
[connection signal="pressed" from="more/VBoxContainer/credits" to="." method="_on_more_credits_pressed"]
[connection signal="pressed" from="more/VBoxContainer/back" to="." method="_on_more_back_pressed"]
[connection signal="pressed" from="stats/back" to="." method="_on_back_tomore_pressed"]
[connection signal="pressed" from="credits/back" to="." method="_on_back_tomore_pressed"]
[connection signal="pressed" from="credits/RESET" to="." method="_on_reset_pressed"]
